add top 10 list

--- a/w01.md
+++ b/w01.md
@@ -6,30 +6,33 @@ permalink: /W01/
 # Top 10 List of Week 01
 
 1. [Operating System](https://www.guru99.com/operating-system-tutorial.html/) <br>
-
+It provides a brief but complete description of the operating system including definition, brief history,types, uses, advantages and disadvantages
 
 2. [Interactive Vim tutorial](https://www.openvim.com/) <br>
+Vim tutorials are interactive and also have an attractive design,make it easier for us to understand the material by doing it directly
 
-
-3. [Vim adventures](https://vim-adventures.com/) <br>
-
+3. [Vi](https://www2.seas.gwu.edu/~mems/ece215/reference/vi-cheatsheet.pdf) <br>
+Vi cheat sheet that neatly organized and easy to see
 
 4. [Vi and Vim](https://www.shell-tips.com/linux/vi-vs-vim/#:~:text=Vi%20stands%20for%20Visual.,Vi%20standard%20with%20many%20additions./) <br>
-
+At first, I was a little confused about vi and vim and this website explains the difference between vi and vim
 
 5. [Basic Commands](https://www.hostinger.com/tutorials/linux-commands) <br>
+It provides information on some basic commands commonly used when operating Linux
 
-
-6. [Regular Expressions](https://www.linux.com/topic/desktop/introduction-regular-expressions-new-linux-users/) <br>
-
+6. [Regular Expressions](https://medium.com/factory-mind/regex-tutorial-a-simple-cheatsheet-by-examples-649dc1c3f285) <br>
+Cheat sheets and some examples of their use. They were divided into several groups so that it made it easier for me to understand them.
 
 7. [Remove Files and Directories](https://linuxize.com/post/how-to-remove-files-and-directories-using-linux-command-line/) <br>
-
+This page helps me to solve the problem I faced while working on week 1, where there is an explanation regarding
+Steps to delete a directory containing non-empty files using the Linux command line
 
 8. [rm Command](https://youtu.be/DWbLZygBrrM) <br> 
-
+as great as the page above, this video also supports me to solve the problem of deleting direcotry where in a very short video,
+There are various commands that are intended to delete files with different conditions
 
 9. [Grep, Sed, Awk](https://www.baeldung.com/linux/grep-sed-awk-differences) <br>
+Go through the command-line tools grep, sed, and awk and study the differences in functionality among them.  
 
-
-10. [more Regex](https://www.w3resource.com/linux-system-administration/regular-expressions.php) <br>
+10. [more Regex](https://youtu.be/mpyCeSvGh-M) <br>
+The video is short but has an easy explanation of regex material so it will be easy to understand especially for beginners
