--- a/w02.md
+++ b/w02.md
@@ -5,73 +5,41 @@ permalink: /W02/
 
 # Top 10 List of Week 02
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [Type of Cyber Attacks](https://www.youtube.com/watch?v=Dk-ZqQ-bfy4)<br>
+It gives an explanation about 8 most common cybersecurity threats :
+malware , phising, password attacks, DDoS, Man in the Middle, Drive by Download,Malvertising, and Rogue Software.
+This video also explain how various attack work and some solution how to handle it.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [What is a Trojan ?](https://us.norton.com/internetsecurity-malware-what-is-a-trojan.html)<br>
+This page will give you some information about Trojan. 
+Is it a virus or is it a malware ? 
+How do Trojans work ? 
+and also provide information about some common types of Trojan malware,how Trojans impact mobile device.
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [Computer Worm](https://softwarelab.org/what-is-a-computer-worm/)<br>
+This worm is not a wriggly creatures that children play with and adults use as bait when fishing. 
+This page explains about the definition of computer worm, what type of computer worms exist, and how to remove a computer worm. 
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [Biometrics Authentication](https://www.csoonline.com/article/3339565/what-is-biometrics-and-why-collecting-biometric-data-is-risky.html)<br>
+Biometrics are physical or behavioral human characteristics to that can be used to digitally identify a person to grant access to systems, devices or data.
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [C Programming](https://www.youtube.com/watch?v=3lQEunpmtRA)<br>
+This video is short but has an easy explanation of C basic
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [Cryptography](https://www.youtube.com/watch?v=jhXCTbFnK8o)<br>
+An interesting video about Cryptography. Just check it out.
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [Beginner's guide](https://choosetoencrypt.com/privacy/complete-beginners-guide-to-internet-safety-privacy/)<br>
+Some information about from whom we protect our privacy, what kind of information should we keep private,and how to protect our privacy on internet
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [What is Spoofing ?](https://www.pandasecurity.com/en/mediacenter/panda-security/what-is-spoofing/)<br>
+It contains Explanation about the definition of spoofing,how does spoofing happen,
+various type of spoofing attacks, how to know if we're being spoofed, and also how to protect against spoofing attacks.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+9. [DoS Attack](https://www.cloudflare.com/learning/ddos/glossary/denial-of-service/)<br>
+Check this site to gain more knowledge about DoS attack
+
+10. [more about C Language](https://www.geeksforgeeks.org/c-programming-language/?ref=leftbar)<br>
+Learn C language using this site
 
