--- a/w03.md
+++ b/w03.md
@@ -5,73 +5,33 @@ permalink: /W03/
 
 # Top 10 List of Week 03
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [FUSE](https://engineering.facile.it/blog/eng/write-filesystem-fuse/) <br>
+It gives an explanation about FUSE, advantages of FUSE and disadvantages of FUSE.The flowchart really helps me understand how FUSE works.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [File System](https://www.tutorialspoint.com/operating_system/os_file_system.htm) <br>
+This page gives a complete explanation but easy to understand about file system so that i can complete my understanding about file system.   
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [Mounting](https://medium.com/@riteeksrivastava/mounting-in-file-system-c965c907a40b#:~:text=Mounting%20refers%20to%20making%20a,or%20subdirectory%20of%20that%20system.) <br>
+It gives a nice explanation about Mounting in file system where Mounting refers to making a group of files in a file system structure accessible to user or group of users. It is done by attaching a root directory from one file system to that of another.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [Mounting file system](https://youtu.be/QT1mBAJBuoA) <br>
+A video that gives  simple explanation about mounting
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [File Allocation Methods](https://www.geeksforgeeks.org/file-allocation-methods/) <br>
+The allocation methods define how the files are stored in the disk blocks.There are 3 file allocation methods Contiguous Allocation, Linked Allocation, and Indexed Allocation.
+By reading this page, i can understand the advantages and disadvantages of each methods
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [Partition](https://techterms.com/definition/partition#:~:text=A%20partition%20is%20a%20section,to%20a%20separate%20physical%20device.&text=Windows%20stores%20system%20files%20in,data%20files%20in%20data%20partition.) <br>
+A great explanation about partition. Just check it out 
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [File Allocation Table (FAT) ](https://youtu.be/V2Gxqv3bJCk) <br>
+Brief video about File Allocation Table,easy to understand. 
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [NFS](https://www.javatpoint.com/nfs) <br>
+This page explain about NFS in general.It also explains the difference between NFS and CIFS. This site gives me a little information about NFS
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+9. [More NFS](https://medium.com/mtiakakom/network-file-system-nfs-f1a14b7b33e2) <br>
+Another great explanation about NFS, it explain deeper (than page number 8) + it provides architecture diagrams that help me to understand more about NFS 
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
-
+10. [Hard Disk Drive (HDD)](https://www.blogpress.id/apa-itu-hdd/) <br>
+This page explain the definition of HDD and various type of HDD.It also discuss about the difference between HDD and SSD that makes my understanding clearer.
