--- a/w04.md
+++ b/w04.md
@@ -5,73 +5,44 @@ permalink: /W04/
 
 # Top 10 List of Week 04
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [Memory Management Unit](https://er.yuvayana.org/what-is-memory-management-unit-mmu/)<br>
+What is MMU ? MMU is short for the memory management unit. It is the hardware part that oversees virtual memory system. Regularly, the MMU is a piece of the CPU; however, in certain structures it is a different chip.
+The MMU incorporates a modest quantity of memory that holds a table coordinating virtual address to physical address.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+2. [Virtual vs Physical addresses](http://web.cs.wpi.edu/~cs3013/c06/week4-paging.pdf)<br>
+It gives an explanation about virtual and physical addresses where Physical addresses refer to hardware addresses of physical memory and
+Virtual addresses refer to the virtual store viewed by the process.For more information, check it out.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+3. [Big Endian and Little Endian](https://chortle.ccsu.edu/AssemblyTutorial/Chapter-15/ass15_3.html)<br>
+A short but clear explanation about the difference between Big Endian and  Little Endian. The illustration that given also helps me to get clear more about the explanation.
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+4. [Endianness explained with an egg](https://youtu.be/NcaiHcBvDR4)<br>
+This video gives Unique explanation about Big Endian and Little Endian with an egg of Liliput in Gullver's travels. 
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+5. [Library in Linux](https://www.tecmint.com/understanding-shared-libraries-in-linux/)<br>
+Linux supports 2 classes of libraries,static libraries are bound to a program statically at compile time and dynamic/shared libraries are loaded when a program is launched and loaded into memory and binding occurs at run time.
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+
+6. [Memory Allocation](https://www.geeksforgeeks.org/what-is-dynamic-memory-allocation/)<br>
+This page gives some explanation about dynamic memory allocation.There are many reasons and advantage of allocating memory dynamically. One of them is Dynamically created lists insertions and deletions can be done very easily just by the manipulation of addresses whereas in case of statically allocated memory insertions and deletions lead to more movements and wastage of memory.
+To find out more, check this page.
+
+7. [Introduction to pointers in C](https://youtu.be/h-HBipu_1P0)<br>
+watch this video to get information about pointers using C. It gives a clear explanation with a great example that make you easy to understand.
+
+
+8. [Working with pointers](https://youtu.be/X1DcpcgSUXw)<br>
+This video is a continuation of the video on number 7, where it gives an example with code in C, just check this great video. 
+
+
+9. [Paging](https://www.geeksforgeeks.org/paging-in-operating-system/)<br>
+Gives explanation about paging and example. The illustration helps me to understand what it mean.
+
+
+10. [Paging Technique](https://www.youtube.com/watch?v=0Rf5Jc61ArM)<br>
+A great video about paging. It gives a simple explanation that really easy to understand  
 
