--- a/w05.md
+++ b/w05.md
@@ -5,73 +5,36 @@ permalink: /W05/
 
 # Top 10 List of Week 05
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+1. [What is Virtual Memory ?](https://searchstorage.techtarget.com/definition/virtual-memory)<br>
+This page will help you solve the question above. It also tell you how virtual memory works.
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+2. [COW - Copy On Write](https://www.geeksforgeeks.org/copy-on-write/)<br>
+This page explain about copy on write, where COW is a resource management technique.
+One of its main use is in the implementation of the fork system call in which it shares the virtual memory of the OS.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+3. [Page Replacement Algorithm](https://www.geeksforgeeks.org/page-replacement-algorithms-in-operating-systems/)<br>
+This page tells some page replacement algorithms (FIFO, Optimal Page Replacement, and Least Recently Used). It also gives  us some example to make our understanding clearer.
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+4. [Least Recently Algorithm Page Replacement](https://www.geeksforgeeks.org/program-for-least-recently-used-lru-page-replacement-algorithm/<br>
+Least Recently Used (LRU) algorithm is a Greedy algorithm where the page to be replaced is least recently used. For more example, just check it out.
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+5. [Second Chance Page Replacement Policy](https://www.geeksforgeeks.org/second-chance-or-clock-page-replacement-policy/)<br>
+In the Second Chance page replacement policy, the candidate pages for removal are considered in a round robin matter, 
+and a page that has been accessed between consecutive considerations will not be replaced.
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+6. [Allocating kernel memory](https://www.geeksforgeeks.org/operating-system-allocating-kernel-memory-buddy-system-slab-system/)<br>
+In this page, it explains about Two strategies for managing free memory that is assigned to kernel processes Buddy system and Slab allocation.
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+7. [Buddy System](https://www.geeksforgeeks.org/buddy-system-memory-allocation-technique/)<br>
+The buddy system is a memory allocation and management algorithm that manages memory in power of two increments. It also gives us the pros and cons of using it.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+8. [Page Fault](http://digitalthinkerhelp.com/page-fault-in-os-operating-system-what-is-page-fault-handling/)<br>
+The explaination is pretty clear about page fault and also it provides page fault terminology for us
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+9. [Thrashing](https://www.studytonight.com/operating-system/thrashing-in-operating-system)<br>
+This page gives a great explanation about thrashing, causes of thrashing, effect of thrashing, and some techniques used to handle thrashing
+
+10. [Virtual Memory in OS](https://www.guru99.com/virtual-memory-in-operating-system.html)<br>
+A great summarize about Virtual Memory. It gives us a short yet clear explanation. 
 
