--- a/w05.md
+++ b/w05.md
@@ -5,7 +5,6 @@ permalink: /W05/
 
 # Top 10 List of Week 05
 
-
 1. [What is Virtual Memory ?](https://searchstorage.techtarget.com/definition/virtual-memory)<br>
 This page will help you solve the question above. It also tell you how virtual memory works.
 
@@ -16,7 +15,7 @@ One of its main use is in the implementation of the fork system call in which it
 3. [Page Replacement Algorithm](https://www.geeksforgeeks.org/page-replacement-algorithms-in-operating-systems/)<br>
 This page tells some page replacement algorithms (FIFO, Optimal Page Replacement, and Least Recently Used). It also gives  us some example to make our understanding clearer.
 
-4. [Least Recently Algorithm Page Replacement](https://www.geeksforgeeks.org/program-for-least-recently-used-lru-page-replacement-algorithm/<br>
+4. [Least Recently Algorithm Page Replacement](https://www.geeksforgeeks.org/program-for-least-recently-used-lru-page-replacement-algorithm/)<br>
 Least Recently Used (LRU) algorithm is a Greedy algorithm where the page to be replaced is least recently used. For more example, just check it out.
 
 5. [Second Chance Page Replacement Policy](https://www.geeksforgeeks.org/second-chance-or-clock-page-replacement-policy/)<br>
