add top 10 list for w06

--- a/w06.md
+++ b/w06.md
@@ -5,73 +5,43 @@ permalink: /W06/
 
 # Top 10 List of Week 06
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [Process](https://www.studytonight.com/operating-system/operating-system-processes)<br>
+This page gives a clear explanation about Process. A process is a program in execution which then forms the basis of all computation.
+Process memory is diveded into 4 sections : Text, Data, Heap, and Stack. This page also gives me an insight about the difference between 
+Process and program.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [Scheduling](https://www.tutorialspoint.com/operating_system/os_process_scheduling.htm)<br>
+The process scheduling is the activity of the process manager that handles the removal of the running process from the CPU and 
+the selection of another process on the basis of a particular strategy.
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [State Process Model](https://t4tutorials.com/five-state-process-model-in-operating-systems/)<br>
+Process contains 5 states that are involved in the cycle of process New, Ready, Running, Blocked, Exit. Simple and straightforward explanation.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [Introduction to Synchronization](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
+On the basis of synchronization, processes are categorized as one of the following two types:
+Independent Process ( Execution of one process does not affects the execution of other processes ) 
+Cooperative Process ( Execution of one process affects the execution of other processes ) 
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [Threads](https://www.cs.uic.edu/~jbell/CourseNotes/OperatingSystems/4_Threads.html)<br>
+Great note about threads.Quite long but it gives a great expanation about threads 
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [Benefits of Multithreading](https://www.geeksforgeeks.org/benefits-of-multithreading-in-operating-system/)<br>
+There are 4 major catagories the benefits of multithreading : Responsiveness, Resource Sharing, Economy, and Scalability. 
+For more explanation of each benefit, just check this site. 
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [Intro to Concurrent Programming](https://www.toptal.com/software/introduction-to-concurrent-programming)<br>
+What is concurrent programing? Simply described, it’s when you are doing more than one thing at the same time. 
+Not to be confused with parallelism, concurrency is when multiple sequences of operations are run in overlapping periods of time. 
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [Difference between Concurrency and Parallelism](https://www.geeksforgeeks.org/difference-between-concurrency-and-parallelism/)<br>
+Concurrency is the task of running and managing the multiple computations at the same time.
+While parallelism is the task of running multiple computations simultaneously.
+For more point, just check this site.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+9. [Fork](https://www.geeksforgeeks.org/fork-system-call/)<br>
+Fork system call is used for creating a new process, which is called child process, 
+which runs concurrently with the process that makes the fork() call (parent process)
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+10. [Fork() function](https://youtu.be/cex9XrZCU14)<br>
+A great video about fork in C just check it out
 
