--- a/w07.md
+++ b/w07.md
@@ -5,73 +5,46 @@ permalink: /W07/
 
 # Top 10 List of Week 07
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [Race Condition, Critical Section and Semaphore](https://www.tutorialspoint.com/race-condition-critical-section-and-semaphore)<br>
+This site gives a simple explanation about race condition, critical section, and semaphore where
+a race condition happens when the result of multiple thread execution in critical section differs according to the order in which the threads execute.
+Critical Section in a code segment where the shared variables can be accessed and Semaphore  is a signalling mechanism and a thread that is waiting on a semaphore can be signalled by another thread. 
+It's a great short explanation about race condition, critical section and semaphore.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [Peterson’s Algorithm](https://www.geeksforgeeks.org/petersons-algorithm-in-process-synchronization/)<br>
+Peterson’s Algorithm is used to synchronize two processes.It uses two variables, a bool array flag of size 2 and an int variable turn to accomplish it.
+This site provides an explanation with several examples that make it easier for us to understand.
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [Semaphore](https://www.tutorialspoint.com/semaphores-in-operating-system)<br>
+Semaphores are integer variables that are used to solve the critical section problem by using two atomic operations, 
+wait and signal that are used for process synchronization.
+Explanation of the advantages and disadvantages of using a semaphore made me understand better
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [Classical Problem of Synchronization](https://www.studytonight.com/operating-system/classical-synchronization-problems)<br>
+there are 3 problems discussed by this website, Bounded Buffer (Producer-Consumer) Problem, Dining Philosophers Problem, and The Readers Writers Problem.
+Just check it out for more information.
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [Mutex vs Semaphore](https://www.geeksforgeeks.org/mutex-vs-semaphore/)<br>
+A mutex provides mutual exclusion, either producer or consumer can have the key (mutex) and proceed with their work. As long as the buffer is filled by the producer, the consumer needs to wait, and vice versa. 
+A semaphore is a generalized mutex.For more information.The general question provided is very helpful in understanding the difference well.
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [Introduction of Deadlock](https://www.geeksforgeeks.org/introduction-of-deadlock-in-operating-system/)<br>
+Deadlock is a situation where a set of processes are blocked because each process is holding a resource and waiting for another resource acquired by some other process. 
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [Race Conditions and How to Prevent Them](https://www.youtube.com/watch?v=MqnpIwN7dz0)<br>
+This video gives a simple explanation about race condition and how to prevent it. The animation really helps me to understand it clearly
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [Deadlock and Starvation](https://www.geeksforgeeks.org/difference-between-deadlock-and-starvation-in-os/)<br>
+Deadlock occurs when each process holds a resource and wait for other resource held by any other process. 
+Starvation is the problem that occurs when high priority processes keep executing and low priority processes get blocked for indefinite time. 
+For more difference between deadlock and starvation, check this site.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+9. [Deadlock Video](https://www.youtube.com/watch?v=myomEBjnIDw)<br>
+This video provides a fairly simple explanation of deadlocks but provides a flow that is easy enough to understand. The visuals made things a lot clearer.
+Just check this video.
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+10. [Semaphore simplified](https://www.youtube.com/watch?v=PQ5aK5wLCQE)<br>
+Another great video. This video describes semaphores in the form of a restaurant case. 
+A semaphore is like a guard who tracks open seats at the restaurant. He lets in customers to the restaurant only if the seats are available. 
+If the seats are occupied, the customers (processes) will have to wait outside the restaurant.
 
