add w08 top 10 list

--- a/w08.md
+++ b/w08.md
@@ -5,73 +5,35 @@ permalink: /W08/
 
 # Top 10 List of Week 08
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [CPU Scheduling](https://www.studytonight.com/operating-system/cpu-scheduling)<br>
+CPU scheduling is a process that allows one process to use the CPU while the execution of another process is on hold(in waiting state) due to unavailability of any resource like I/O etc, thereby making full use of CPU. By reading this site, we will get a light explanation about CPU Scheduling.
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [Preemptive and non Preemptive](https://www.geeksforgeeks.org/preemptive-and-non-preemptive-scheduling/)<br>
+This site gives me an explanation about the difference between preemptive and non preemptive. The key difference and comparison chart that provided really helps me to know the difference better. 
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [FCFS Scheduling](https://www.guru99.com/fcfs-scheduling.html)<br>
+First Come First Serve (FCFS) is an operating system scheduling algorithm that automatically executes queued requests and processes in order of their arrival. It provides an example that go through the process how to implement FCFS method.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [SJF](https://www.studytonight.com/operating-system/shortest-job-first)<br>
+Shortest Job First scheduling works on the process with the shortest burst time or duration first. This site provides a clear example that really easy to understand.
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [Round Robin](https://www.guru99.com/round-robin-scheduling-example.html)<br>
+It's quite unique where the name of this algorithm comes from the round-robin principle, where each person gets an equal share of something in turns.This sites explain the characteristic of round robin scheduling and a great and clear example.
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [Priority Scheduling](https://www.guru99.com/priority-scheduling-program.html)<br>
+Priority Scheduling is a method that is based on priority.The scheduler will selects the tasks to work as per the priority. 
+The step by step example really helps me to understand how priority works. This site also provides a summary to check our understanding.
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [Multilevel Queue Scheduling](https://www.studytonight.com/operating-system/multilevel-queue-scheduling)<br>
+Multilevel Queue is another class of scheduling algorithms which processes are easily classified into different groups.
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [Terms in CPU Scheduling](https://afteracademy.com/blog/what-is-burst-arrival-exit-response-waiting-turnaround-time-and-throughput)<br>
+This site will explain some confusing terms in CPU scheduling like Burst time, Arrival time, Exit time, Waiting time, Response time, Turnaround time, and throughput.It also gives us some example to make everything clear.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+9. [UMA NUMA](https://www.geeksforgeeks.org/difference-between-uniform-memory-access-uma-and-non-uniform-memory-access-numa/)<br>
+It gives us the definition about (Uniform Memory Access) UMA and (Non-uniform Memory Access) NUMA. The illustration and table of difference really help me to understand. 
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+10. [Scheduling Algorithm (Video)](https://www.youtube.com/watch?v=g6QjVDyGgSE)<br>
+more question - solution that helps us to ensure our understanding. Just check this amazing video. 
+
 
