--- a/w09.md
+++ b/w09.md
@@ -5,73 +5,54 @@ permalink: /W09/
 
 # Top 10 List of Week 09
 
-1. [One](https://en.wikipedia.org/wiki/1)<br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-Vestibulum id dapibus odio, a hendrerit dui.
-Aenean euismod augue tortor, efficitur pulvinar sem scelerisque ac.
-Sed mauris dolor, maximus eget congue vitae, ultricies id arcu.
-Aenean auctor efficitur urna pharetra pellentesque.
+1. [Volatile - Non Volatile](https://www.geeksforgeeks.org/difference-between-volatile-memory-and-non-volatile-memory/amp/)
+This site explain the difference between volatile and non volatile memory. The table really helps me to see the difference
 
-2. [Two](https://en.wikipedia.org/wiki/2)<br>
-Nunc aliquet, nulla non hendrerit sodales, ante ligula fermentum lacus, a fringilla tortor ipsum nec velit.
-Sed ac enim tempus, imperdiet lacus et, fringilla tellus.
-Nunc laoreet pellentesque sapien non finibus.
-Ut blandit lacus eget ante sollicitudin bibendum.
-Aliquam ultricies imperdiet vestibulum.
+2. [Mass Storage Structure](https://www.cs.uic.edu/~jbell/CourseNotes/OperatingSystems/10_MassStorage.html)
+Great summarization about mass storage structure  where it gives us a complete explanation mass 
+storage struture. 
 
-3. [Three](https://en.wikipedia.org/wiki/3)<br>
-Phasellus accumsan vel arcu non aliquet.
-Nullam vitae libero quis nisi molestie imperdiet.
-Sed in dapibus justo.
-Mauris nec magna sagittis, tincidunt diam quis, hendrerit odio.
-Etiam eu porttitor odio.
+3. [Disk Schedulling Algorithm](https://www.google.com/amp/s/www.geeksforgeeks.org/disk-scheduling-algorithms/)
+Beside disk schedulling algorithm,it also explains some reason why disk schedulling is important and duscuss some important terms.
+The graph that provide in this site really helps me to understand how to get total seek time each disk schedulling algorithms.
 
-4. [Four](https://en.wikipedia.org/wiki/4)<br>
-Nunc et mi ac urna gravida rutrum.
-Ut diam nunc, ultrices quis rutrum non, efficitur nec lectus.
-Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Quisque vitae lobortis ante. 
-Nunc vehicula libero at nunc iaculis, sed feugiat sapien aliquet.
+4. [SCAN](https://www.geeksforgeeks.org/scan-elevator-disk-scheduling-algorithms/)
+This site gives explanation about SCAN algorithm. It also explain the advantage and disadvantage of SCAN.
+The given example really helps us to understand it. 
 
-5. [Five](https://en.wikipedia.org/wiki/5)<br>
-Aenean justo ante, scelerisque at ipsum at, rhoncus semper libero.
-Vestibulum scelerisque sem mollis elit lacinia, vel tristique massa placerat.
-Nam laoreet ante vitae sem mattis posuere.
-Vivamus imperdiet erat vitae vehicula consectetur.
-Suspendisse molestie dui quam, vel rutrum felis faucibus ac.
+5. [SWAP space Management](https://www.geeksforgeeks.org/swap-space-management-in-operating-system/)
+It gives explanation about swapping, swap space, swap space mamangement and swap space use. Just check it out.
 
-6. [Six](https://en.wikipedia.org/wiki/6)<br>
-Vestibulum magna quam, fermentum a vehicula sodales, condimentum vitae lectus.
-In hac habitasse platea dictumst.
-Nunc luctus faucibus arcu dignissim lobortis.
-Etiam dapibus ex id hendrerit porttitor.
-Suspendisse quis mattis enim.
+6. [RAID](https://www.geeksforgeeks.org/raid-redundant-arrays-of-independent-disks/)
+RAID, or “Redundant Arrays of Independent Disks” is a technique which makes use of a combination of multiple disks instead of using a single disk 
+for increased performance, data redundancy or both.
 
-7. [Seven](https://en.wikipedia.org/wiki/7)<br>
-Curabitur ut orci quis quam cursus hendrerit vel pulvinar metus
-Phasellus blandit nunc consequat eros aliquam porta.
-Pellentesque sapien diam, facilisis tincidunt accumsan quis, accumsan suscipit velit. 
-Morbi id est maximus, maximus urna eu, auctor odio. 
-Nunc sit amet dictum ipsum.
+7. [Cloud Storage](https://www.ibm.com/cloud/learn/cloud-storage)
+This site gives you an amazing explanation about clud storage.It contains explanation about cloud storage, how does it work, the pros and cons, and some examples.
+Really need to check it out.
 
-8. [Eight](https://en.wikipedia.org/wiki/8)<br>
-Curabitur mauris neque, mollis feugiat ante id, molestie eleifend nunc.
-Cras tincidunt bibendum dignissim.
-Donec non mauris tincidunt, aliquam lorem eget, porta odio.
-Maecenas ac arcu urna.
-Cras congue tellus lacus.
+8. [Difference between FCFS and SCAN](https://www.geeksforgeeks.org/difference-between-fcfs-and-scan-disk-scheduling-algorithms/)
+The table provided in this site is really helpful in understanding the difference between FCFS and SCAN
+.Beside that, it also provide an example for FCFS and SCAN.
 
-9. [Nine](https://en.wikipedia.org/wiki/9)<br>
-Mauris urna libero, varius in purus nec, tempor pharetra lorem.
-Vivamus lorem nisi, mattis ut tellus at, tincidunt cursus libero.
-Curabitur vehicula placerat neque eget iaculis.
-Nulla facilisi.
-Cras condimentum leo a libero cursus lacinia.
+9. [How do hard drives work ?](https://youtu.be/wteUW2sL7bc)
+This interesting video will show us how do hard drives work. The animation really helps us to know better about hard drives.
 
-10. [Ten](https://en.wikipedia.org/wiki/10)<br>
-Nunc imperdiet gravida lorem vitae tincidunt. 
-Phasellus tristique nulla at justo finibus pulvinar.
-Phasellus in leo vitae sem congue sollicitudin eu sed risus.
-Aliquam erat volutpat.
-Proin in erat fringilla, pulvinar nisl quis, vulputate purus.
+10. [Magnetic disk structure](https://prepinsta.com/operating-systems/magnetic-disk-structure)
+A short but clear explanation about magnetic disk structure.It also provides explanation about 
+transfer rate andrandom access time.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
