--- a/w09.md
+++ b/w09.md
@@ -12,7 +12,7 @@ This site explain the difference between volatile and non volatile memory. The t
 Great summarization about mass storage structure  where it gives us a complete explanation mass 
 storage struture. 
 
-3. [Disk Schedulling Algorithm](https://www.google.com/amp/s/www.geeksforgeeks.org/disk-scheduling-algorithms/)
+3. [Disk Schedulling Algorithm](https://www.geeksforgeeks.org/disk-scheduling-algorithms/)
 Beside disk schedulling algorithm,it also explains some reason why disk schedulling is important and duscuss some important terms.
 The graph that provide in this site really helps me to understand how to get total seek time each disk schedulling algorithms.
 
